--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,14 @@ python = "^3.10"
 prompt = "^0.4.1"
 
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_games:main"
 
