--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,12 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Brain-games include: brain-even, brain-calc, brain-gcd, brain-progression, brain-prime"
 authors = ["Your Name <you@example.com>"]
+repository = "https://github.com/prStudentka/python-project-49"
+classifiers =[
+	"Topic :: Games/Entertainment"
+]
 readme = "README.md"
 packages = [{include = "brain_games"}]
 
